--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     <h1>Catch the Butterfly! 🦋</h1>
     <p id="score">Score: 0</p>
     <div id="game-container">
-        <img id="butterfly" src="https://upload.wikimedia.org/wikipedia/commons/4/4c/Monarch_Butterfly_Danaus_plexippus_on_Milkweed_5797px.jpg" alt="Butterfly">
-    </div>
+      <img id="butterfly" src="butterfly.gif" alt="Butterfly">
+      </div>
     <script>
         let score = 0;
         const butterfly = document.getElementById("butterfly");
